Dont allow multiple responses unless specified

--- a/forms/sample.yml
+++ b/forms/sample.yml
@@ -1,6 +1,8 @@
 title: Sample Form
 admins:
   - admin
+# Add the following to enable multiple responses per user
+# multipleResponses: true
 fields:
   - name: email
     server: true
