--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-node8": "^1.2.0",
     "convict": "^4.0.2",
     "joi": "^13.1.0",
+    "joi-json": "^2.0.1",
     "js-yaml": "^3.10.0",
     "koa": "^2.3.0",
     "koa-compose": "^4.0.0",
