--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "koa-joi-router": "^5.0.0",
     "koa-joi-router-docs": "^0.1.9",
     "mysql2": "^1.5.1",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
     "sequelize": "^4.28.1",
     "sqlite3": "^3.1.13"
   },
