--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
     "sequelize": "^4.28.1",
+    "sequelize-json": "meghprkh/sequelize-json",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {
