--- a/forms/sample.yml
+++ b/forms/sample.yml
@@ -17,9 +17,9 @@ fields:
   # - name: team_size
   #   type: select
   #   data:
-  #     # Entries are stored as index of option + 1. For ex, 1 in DB represents
-  #     # 3 and 2 in DB represents 1
-  #     options: [3, 1, 2]
+  #     # options must be string
+  #     options: ['3', '1', '2']
+  #     # other: true # For adding other option and allowing any input entry
 
 # Payment example
 # title: Payment Sample Form
