--- a/forms/sample.yml
+++ b/forms/sample.yml
@@ -20,7 +20,14 @@ fields:
   #     # options must be string
   #     options: ['3', '1', '2']
   #     # other: true # For adding other option and allowing any input entry
-
+  # - name: team
+  #   type: team
+  #   data:
+  #     fields:
+  #       - name
+  #       - organization
+  #     min: 1
+  #     max: 3
 # Payment example
 # title: Payment Sample Form
 # admins:
